@@ -1,12 +1,12 @@
-WAY,2911,1589,0,0-A
-WAY,5005,1277,0,0-B
-WAY,950,4010,0,1-A
-WAY,2213,3386,0,1-B
-WAY,149,2287,0,2-A
-WAY,1946,5970,0,2-B
-WAY,4069,1322,0,3-A
-WAY,4842,5228,0,3-B
-WAY,4069,5376,0,4-A
-WAY,6000,5050,0,4-B
-WAY,1545,1842,0,5-A
-WAY,3356,5465,0,5-B
+WAY,594,2508,0,0-A
+WAY,1384,2118,0,0-B
+WAY,2545,3362,0,1-A
+WAY,3752,3158,0,1-B
+WAY,2545,827,0,2-A
+WAY,3028,3269,0,2-B
+WAY,1820,994,0,3-A
+WAY,3130,799,0,3-B
+WAY,966,1152,0,4-A
+WAY,2099,3418,0,4-B
+WAY,93,1430,0,5-A
+WAY,1217,3734,0,5-B
