@@ -84,4 +84,29 @@ public class MessageContents {
 	public int getLength() {
 		return contents.size();
 	}
+
+	@Override
+	public int hashCode() {
+		final int prime = 31;
+		int result = 1;
+		result = prime * result + ((contents == null) ? 0 : contents.hashCode());
+		return result;
+	}
+
+	@Override
+	public boolean equals(Object obj) {
+		if(this == obj)
+			return true;
+		if(obj == null)
+			return false;
+		if(getClass() != obj.getClass())
+			return false;
+		MessageContents other = (MessageContents) obj;
+		if(contents == null) {
+			if(other.contents != null)
+				return false;
+		} else if(!contents.equals(other.contents))
+			return false;
+		return true;
+	}
 }
