@@ -11,17 +11,17 @@ public class MotionParameters {
 	public int TURNSPEED_MAX = 110;
 	public int TURNSPEED_MIN = 25;
 	
-	public int LINSPEED_MAX = 250;
+	public int LINSPEED_MAX = 175;
 	public int LINSPEED_MIN = 250;
 	
 	/**
 	 * If false, the robot will continue whatever motion was in progress when the destination is reached
 	 */
-	public boolean STOP_AT_DESTINATION = false;
+	public boolean STOP_AT_DESTINATION = true;
 	
-	public boolean ENABLE_ARCING = false;
-	public int ARCSPEED_MAX = 0;
-	public int ARCANGLE_MAX = 0;
+	public boolean ENABLE_ARCING = true;
+	public int ARCSPEED_MAX = 200;
+	public int ARCANGLE_MAX = 25;
 	
 	/**
 	 * Sets the collision avoidance mode. Options are:</br>
